fix: update navbar z-index

--- a/angular-without-ssr/src/app/shared/components/auth-navbar.component.scss
+++ b/angular-without-ssr/src/app/shared/components/auth-navbar.component.scss
@@ -8,7 +8,7 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.04);
   position: sticky;
   top: 0;
-  z-index: 40;
+  z-index: 52;
 }
 
 :host-context(:root[data-theme="dark"]) .navbar {
